# pihole-restore

./: .gitignore  Cargo.toml  Makefile  README.md  gravity.rs  restore.rs  types.rs
.github/workflows/: lint-on-push.yml  release-on-tag.yml  test-on-push.yml
img/: pihole-restore-design.excalidraw
src/: main.rs
src/pihole/: cli.rs  dhcp.rs  dns.rs  gravity.rs  mod.rs
