[package]
name = "pihole_restore"
version = "0.1.0"
edition = "2021"
authors = ["Chamila de Alwis"]

[dependencies]
flate2 = "1.0"
tar = "0.4"
rusqlite = "0.26"
serde_json = "1.0.96"
log = "0.4.17"
env_logger = "0.10.0"
serde = { version = "1.0.163" , features = ["derive"] }
clap = { version = "4.3.0", features = ["derive"] }
regex = "1.8.2"

[[bin]]
name = "pihole_restore"
path = "restore.rs"
